CMAKE_MINIMUM_REQUIRED(VERSION 2.0)

PROJECT("xvatool")
SET(TARGET_NAME "xvatool")
FILE(GLOB_RECURSE SOURCE_FILES src/*.cpp)
ADD_EXECUTABLE(${TARGET_NAME} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${TARGET_NAME}
		ssl
)
INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/xvatool
		DESTINATION /usr/local/bin)
